--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ after_success:
   - echo '${ID_RSA}' > id_rsa
   - chmod 600 id_rsa
   - ssh -i id_rsa ${PROD_USER}@${PROD_ADDRESS} 'bash -s' < scripts/deploy.sh
-script: hello
+script: python hello.py
