--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
   - '2.7'
 script: python hello.py
 after_success:
-  - echo '${ID_RSA}' > id_rsa
+  - echo $ID_RSA | base64 -D -o id_rsa
   - chmod 600 id_rsa
   - ssh -i id_rsa -o StrictHostKeyChecking=no ${PROD_USER}@${PROD_ADDRESS} 'bash -s' < scripts/deploy.sh
