--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
+sudo: required
+
 language: python
+
 python:
   - '2.7'
+
+services:
+  - docker
+
 script: python hello.py
-after_success:
-  - echo $ID_RSA | base64 -d > id_rsa
-  - chmod 600 id_rsa
-  - ssh -i id_rsa -o StrictHostKeyChecking=no ${PROD_USER}@${PROD_ADDRESS} 'bash -s' < scripts/deploy.sh
+
+deploy:
+  provider: script
+  script: bash scripts/deploy.sh
