Specify production and production environments

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ script: python hello.py
 deploy:
   provider: script
   script: bash scripts/deploy.sh
+  on:
+    all_branches: true
+    $TRAVIS_BRANCH =~ ^master|develop$
