--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ language: python
 python:
   - '2.7'
 
-script: python hello.py
+install:
+  - pip install -r requirements.txt
+
+script: pytest
 
 deploy:
   provider: script
