--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,10 @@ FROM python:2.7-slim
 ARG port
 
 COPY requirements.txt ./
-COPY hello.py ./
+COPY hello_app/ ./
 
 RUN pip install --no-cache-dir -r requirements.txt
 
 ENV GUNICORN_CMD_ARGS="--bind=0.0.0.0:${port}"
-ENTRYPOINT ["gunicorn", "hello:app"]
+ENTRYPOINT ["gunicorn", "hello_app.hello:app"]
 EXPOSE "${port}"
