Fix a dockerfile path mistake

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM python:2.7-slim
 ARG port
 
 COPY requirements.txt ./
-COPY hello_app/ ./
+COPY ./hello_app ./hello_app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
