--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,30 @@
+asn1crypto==0.24.0
 attrs==17.4.0
+certifi==2018.1.18
+cffi==1.11.5
+chardet==3.0.4
 click==6.7
+coverage==4.5.1
+coveralls==1.3.0
+cryptography==2.2.2
+docopt==0.6.2
+enum34==1.1.6
 Flask==0.12.2
 funcsigs==1.0.2
 gunicorn==19.7.1
+idna==2.6
+ipaddress==1.0.19
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 more-itertools==4.1.0
 pluggy==0.6.0
 py==1.5.3
+pycparser==2.18
+pyOpenSSL==17.5.0
 pytest==3.5.0
+pytest-cov==2.5.1
+requests==2.18.4
 six==1.11.0
+urllib3==1.22
 Werkzeug==0.14.1
