--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 install:
   - pip install -r requirements.txt
 
-script: pytest
+script: pytest --cov=hello_app tests/ && coveralls
 
 deploy:
   provider: script
