--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,16 @@ language: python
 
 python:
   - '2.7'
+  - '3.6'
 
 install:
   - pip install -r requirements.txt
 
-script: pytest --cov=hello_app tests/ && coveralls
-
-deploy:
-  provider: script
-  script: bash scripts/deploy.sh
-  on:
-    all_branches: true
-    condition: $TRAVIS_BRANCH =~ ^master|develop$
+jobs:
+  - include:
+    - stage: test
+      script: pytest --cov=hello_app tests/ && coveralls
+    - stage: deploy
+      python: 2.7
+      script: scripts/deploy.sh
+      if: branch IN (master, develop)
