Fix .travis.yml markup

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ stages:
     if: branch IN (master, develop)
 
 jobs:
-  - include:
+  include:
       script: pytest --cov=hello_app tests/ && coveralls
     - stage: deploy
       python: 2.7
