--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ stages:
 
 jobs:
   include:
-      script: pytest --cov=hello_app tests/ && coveralls
+    - script: pytest --cov=hello_app tests/ && coveralls
     - stage: deploy
       python: 2.7
       script: scripts/deploy.sh
