--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,7 @@ python:
 install:
   - pip install -r requirements.txt
 
-# Key required by travis in python projects, normally testing would be done
-# here but we're doing that in using build stages
-script: true
+script: skip
 
 stages:
   - test
