--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,14 @@ python:
 install:
   - pip install -r requirements.txt
 
-script: skip
+script: pytest --cov=hello_app tests/
 
 jobs:
   include:
-    - script: pytest --cov=hello_app tests/ && coveralls
     - stage: deploy
       python: 2.7
       script: scripts/deploy.sh
       if: branch IN (master, develop)
+
+after_success:
+  - codecov
