Only push to coveralls once per push from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,8 @@ script: pytest --cov=hello_app tests/
 
 jobs:
   include:
+    - stage: coveralls
+      script: coveralls
     - stage: deploy
       script: scripts/deploy.sh
       if: branch IN (master, develop) AND type = push
-
-after_success:
-  - coveralls
