--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - '3.6'
 
 install:
-  - pip install -r requirements.txt
+  - scripts/install.sh travis
 
 script: pytest --cov=hello_app tests && coveralls
 
