--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,9 @@
 FROM python:2.7-slim
 ARG port
 
-COPY requirements.txt ./
-COPY ./hello_app ./hello_app
+COPY . .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN scripts/install.sh prod
 
 ENV GUNICORN_CMD_ARGS="--bind=0.0.0.0:${port}"
 ENTRYPOINT ["gunicorn", "hello_app.hello:app"]
