Combine lint-stage script-values in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ script: pytest --cov=hello_app tests && coveralls
 jobs:
   include:
     - stage: lint
-      script: shellcheck scripts/*.sh
-      script: flake8 hello_app tests
+      script: shellcheck scripts/*.sh && flake8 hello_app tests
     - stage: deploy
       script: scripts/deploy.sh
       if: branch IN (master, develop) AND type = push
