--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ jobs:
       script: shellcheck scripts/*.sh && flake8 hello_app tests
 
     - stage: deploy to production
-      script: scripts/deploy.sh 8200 stacks-production
+      script: scripts/deploy.sh production 8200
       if: branch IN (master) AND type = push
 
     - stage: deploy to staging
-      script: scripts/deploy.sh 8210 stacks-staging
+      script: scripts/deploy.sh staging 8210
       if: branch IN (develop) AND type = push
