--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ python:
 install: scripts/install.sh travis
 script: scripts/lint_and_test.sh
 
-jobs.include:
-  - stage: deploy to production
-    script: scripts/deploy.sh production 8200
-    if: branch IN (master) AND type = push
+jobs:
+  include:
+    - stage: deploy to production
+      script: scripts/deploy.sh production 8200
+      if: branch IN (master) AND type = push
 
-  - stage: deploy to staging
-    script: scripts/deploy.sh staging 8210
-    if: branch IN (develop) AND type = push
+    - stage: deploy to staging
+      script: scripts/deploy.sh staging 8210
+      if: branch IN (develop) AND type = push
